# tuatara

./: .gitignore  MANUAL.md  NOTES.md  README.md  pyproject.toml  sample-tuatara.toml  sonar-project.properties
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_cli.py  test_cover_art_fetcher.py  test_playlist.py  test_sanitize.py  test_settings.py
tuatara/: config.py  cover_art.py  cover_art_fetcher.py  image_utils.py  interface.py  main.py  player.py  playlist.py  playlist_entry.py  sanitize.py  settings.py
