[tool.poetry]
name = "tuatara"
version = "0.5.0"
description = "Tuatara is a text-mode music player."
authors = ["Bill Nottingham <notting@splat.cc>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wenottingham/tuatara"
keywords = ["music", "media", "player"]
packages = [ { include = "tuatara" } ]
include = ["sample-tuatara.toml", "MANUAL.md"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Sound/Audio :: Players :: MP3",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pillow = "^10.3.0"
urllib3 = "^2.1.0"
pygobject = "^3.46.0"
m3u8 = "^4.0.0"
blessed = "^1.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pex = "^2.3.1"

[tool.poetry.scripts]
tuatara = 'tuatara.main:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
